# news-spark

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/.claude/agents/: code-reviewer.md
.streamlit/: config.toml
app/: main.py
app/components/: __init__.py  feedback_panel.py  history_store.py  progress_tracker.py  results_display.py  topic_input.py
app/pages/: 02_history.py  03_preferences.py
docs/: CONTRIB.md  DESIGN.md  MEMORY_SYSTEM.md  RUNBOOK.md
src/agents/: __init__.py  base.py  content_synthesizer.py  deep_analyzer.py  news_scraper.py  social_media.py  supervisor.py
src/graph/: __init__.py  edges.py  nodes.py  research_graph.py  state.py
src/memory/: __init__.py  feedback_processor.py  manager.py  personalization.py  service.py
src/memory/models/: __init__.py  feedback.py  knowledge_graph.py  learned_correction.py  user_profile.py
src/memory/storage/: __init__.py  sqlite_store.py  vector_store.py
src/models/: __init__.py  content.py  video_material.py
src/scrapers/: __init__.py  base.py  google_news.py  linkedin.py  news_api.py  ptt.py  threads.py
src/utils/: __init__.py  config.py  llm_factory.py  rate_limiter.py
tests/: conftest.py
tests/e2e/: conftest.py  test_content_rendering.py  test_sidebar.py
tests/e2e/pages/: news_spark_page.py
tests/unit/: conftest.py
tests/unit/test_agents/: test_content_synthesizer.py  test_deep_analyzer.py  test_news_scraper.py  test_social_media.py  test_supervisor.py
tests/unit/test_graph/: test_edges.py  test_nodes.py  test_research_graph.py
tests/unit/test_memory/: test_feedback_processor.py  test_manager.py  test_models.py  test_personalization.py  test_service.py  test_sqlite_store.py
(+9 files in other folders)
