[project]
name = "news-spark"
version = "0.1.0"
description = "新聞與訊息分析工具，用於產生有趣短片素材"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.53.0",
    "openai>=1.60.0",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=1.3.1",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    # Phase 1: 基礎設施
    "langgraph>=1.0.7",
    "chromadb>=1.4.1",
    "feedparser>=6.0.12",
    "aiosqlite>=0.22.1",
    "tenacity>=9.1.2",
    "pydantic-settings>=2.12.0",
]

[tool.uv]
dev-dependencies = [
    "playwright>=1.58.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a running Streamlit server",
]
